# my-econ-app

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_econ_app/: __init__.py  main.py
tests/: test_main.py
