[project]
name = "my-econ-app"
version = "0.1.0"
description = "Economic data fetcher and visualizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "yfinance>=0.2.54",
]

[project.scripts]
econ-report = "my_econ_app.main:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]